<resources>
    <string name="app_name">Rehat</string>
    <string name="title">Rehat</string>
    <string name="medicine_image_desc">Ilustrasi menggambarkan konselor pria dan wanita</string>
    <string name="welcome_text">Selamat datang di aplikasi <b>Remaja Sehat</b>, disini kamu akan mendapatkan edukasi
        tentang bahayanya virus <b>HIV &amp; AIDS</b> serta layanan untuk berkonsultasi dengan Konselor.
    </string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="halo">Halo,</string>
    <string name="selamat_datang_kembali">Selamat Datang Kembali</string>
    <string name="masukkan_nama_pengguna">Masukkan nama pengguna</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masukkan_kata_sandi">Masukkan kata sandi</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="ikon_panah_kembali_ke_halaman_sebelumnya">Kembali ke halaman sebelumnya</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_nama_lengkap">Masukkan nama lengkap</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="masukkan_ulang_kata_sandi">Masukkan ulang kata sandi</string>
    <string name="jaminan">Kami menjamin kerahasiaan data diri anda. Data tersebut hanya akan digunakan untuk meningkatkan konten dan layanan kami.</string>
    <string name="selamat_bergabung">Selamat Bergabung</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="edukasi">Edukasi</string>
    <string name="hai">Hai Calvin,</string>
    <string name="daftar_topik">Ini daftar topik edukasi yang tersedia</string>
    <string name="cari_materi">Cari materi berdasarkan judul ....</string>
    <string name="lengkapi_profile_kamu">Segera lengkapi profile kamu</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="log_out">LOG OUT</string>
    <string name="peringatan">Peringatan</string>
    <string name="nama_konselor">Nama Konselor</string>
    <string name="profesi">Profesi</string>
    <string name="lokasi">Lokasi</string>
    <string name="lihat_profil">Lihat Profil</string>
    <string name="foto_profil_konselor">foto profil konselor</string>
    <string name="judul">Judul</string>
    <string name="subjudul">SubJudul</string>
    <string name="copyright">2020 © Remaja Sehat App</string>
    <string name="ilustrasi_kosong">Ilustrasi menggambarkan seseorang sedang memegang kardus kosong</string>
    <string name="kamu_belum_simpan">Kamu belum menyimpan materi apapun, yuk lihat-lihat dulu siapatau ada yang mau kamu simpan :)</string>
    <string name="eksplorasi_materi">Eksplorasi Materi</string>
    <string name="ini_konselor">Ini konselor yang siap membantumu</string>
    <string name="ilustrasi_sendirian">Ilustrasi menggambarkan seorang pria yang sedang menunggu sendirian</string>
    <string name="belum_ada_notifikasi">Saat ini belum ada notifikasi apapun, coba kamu cek lagi nanti :)</string>
    <string name="ilustrasi_bertemu">Ilustrasi menggambarkan seseorang sedang bertemu dengan konselor</string>
    <string name="belum_ada_janji">Belum ada status persetujuan saat ini. Yuk kenalan dulu dengan Konselor kami untuk membuat janji pertemuan :)</string>
    <string name="memilih_konselor">Memilih Konselor</string>
    <string name="halaman_tersimpan">Halaman Tersimpan</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="Notifikasi">Notifikasi</string>
    <string name="Profile">Profile</string>
    <string name="masukkan_nama_suara">Masukkan nama pengguna menggunakan suara</string>
    <string name="masukkan_sandi_suara">Masukkan kata sandi menggunakan suara</string>
    <string name="masukkan_email_suara">Masukkan email menggunakan suara</string>
    <string name="masukkan_nama_lengkap_suara">Masukkan nama lengkap menggunakan suara</string>
    <string name="masukkan_sandi_ulang_suara">Masukkan ulang kata sandi menggunakan suara</string>
    <string name="cari_materi_dengan_suara">Cari materi berdasarkan judul menggunakan suara</string>
    <string name="kembali_ke_halaman_memilih_konselor">kembali ke halaman memilih konselor</string>
    <string name="teks_chat_kosong">Kamu tidak sedang melakukan konsultasi online saat ini, yuk kenalan dulu dengan Konselor kami siapatau cocok :)</string>
    <string name="pesan_konselor">Pesan Konselor</string>
    <string name="konsultasi_online">Konsultasi Online</string>
    <string name="ilustrasi_menggambarkan_tidak_adanya_percakapan">ilustrasi menggambarkan tidak adanya percakapan</string>
    <string name="tempat_konsultasi">Tempat Konsultasi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
