<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".Registrasi">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@color/colorPrimary">
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/guideline13"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.02"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/guideline14"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.98"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/guideline15"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.02"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/guideline16"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="1"/>

        <android.support.constraint.Guideline
                android:id="@+id/guideline17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline17"
                app:layout_constraintVertical_bias="1.0">

            <TextView
                    android:id="@+id/regisNamaLengkap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/nama_lengkap"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <EditText
                    android:id="@+id/editTextNamaLengkap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableEnd="@drawable/ic_microphone"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/masukkan_nama_lengkap"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/regisNamaLengkap"
                    app:layout_constraintTop_toBottomOf="@+id/regisNamaLengkap" />

            <TextView
                    android:id="@+id/regisNamaPengguna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/nama_pengguna"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/regisNamaLengkap"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNamaLengkap" />

            <EditText
                    android:id="@+id/editTextNamaPengguna"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableEnd="@drawable/ic_microphone"
                    android:ems="10"
                    android:hint="@string/masukkan_nama_pengguna"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/regisNamaLengkap"
                    app:layout_constraintTop_toBottomOf="@+id/regisNamaPengguna" />

            <TextView
                    android:id="@+id/regisEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/regisNamaLengkap"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNamaPengguna" />

            <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableEnd="@drawable/ic_microphone"
                    android:ems="10"
                    android:hint="@string/masukkan_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/regisNamaLengkap"
                    app:layout_constraintTop_toBottomOf="@+id/regisEmail" />

            <TextView
                    android:id="@+id/regisKataSandi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/kata_sandi"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/regisNamaLengkap"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <EditText
                    android:id="@+id/editTextKataSandi1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableEnd="@drawable/ic_microphone"
                    android:ems="10"
                    android:hint="@string/masukkan_kata_sandi"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/regisNamaLengkap"
                    app:layout_constraintTop_toBottomOf="@+id/regisKataSandi" />

            <TextView
                    android:id="@+id/regisKonfirmasiKataSandi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/konfirmasi_kata_sandi"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/regisNamaLengkap"
                    app:layout_constraintTop_toBottomOf="@+id/editTextKataSandi1" />

            <EditText
                    android:id="@+id/editTextKonfirmasiKataSandi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableEnd="@drawable/ic_microphone"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/masukkan_ulang_kata_sandi"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/regisNamaLengkap"
                    app:layout_constraintTop_toBottomOf="@+id/regisKonfirmasiKataSandi" />

            <TextView
                    android:id="@+id/regisJaminan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/jaminan"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/editTextNamaLengkap"
                    app:layout_constraintTop_toBottomOf="@+id/editTextKonfirmasiKataSandi" />

            <Button
                    android:id="@+id/regisButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_button_green_borderless"
                    android:text="@string/daftar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/regisJaminan" />
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/guideline18"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.13"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/guideline19"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.21"/>
        <TextView
                android:text="@string/halo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registrasiHalo" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline18" app:layout_constraintStart_toStartOf="@+id/guideline13"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline14"
                android:layout_marginEnd="8dp" android:textColor="@android:color/white" android:textStyle="bold"
                android:textSize="47sp" app:layout_constraintHorizontal_bias="0.05"/>
        <TextView
                android:text="@string/selamat_bergabung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeRegister" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline17"
                app:layout_constraintStart_toStartOf="@+id/registrasiHalo"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/registrasiHalo"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
                android:textColor="@android:color/white" android:textSize="24sp"/>

        <ImageView
                android:id="@+id/backRegis"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/ikon_panah_kembali_ke_halaman_sebelumnya"
                app:layout_constraintBottom_toTopOf="@+id/guideline18"
                app:layout_constraintEnd_toStartOf="@+id/guideline19"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="@+id/guideline15"
                app:srcCompat="@drawable/ic_arrow_back" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
